<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/notePad"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_plans"
        android:orderInCategory="100"
        android:title="@string/planner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_address"
        android:orderInCategory="100"
        android:title="@string/address"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_pay"
        android:orderInCategory="100"
        android:title="@string/pay"
        app:showAsAction="never" />
</menu>